@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2019 the original author or authors.
+ * Copyright 2015-2020 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -43,7 +43,6 @@ class MultiReleaseJarTests {
 			"  | +-- findAllNonSystemBootModuleNames() [OK]", //
 			"  | '-- preconditions() [OK]", //
 			"  '-- JupiterIntegrationTests [OK]", //
-			"    +-- javaScriptingModuleIsAvailable() [OK]", //
 			"    +-- moduleIsNamed() [A] Assumption failed: not running on the module-path", //
 			"    +-- packageName() [OK]", //
 			"    '-- resolve() [OK]", //
@@ -55,11 +54,11 @@ class MultiReleaseJarTests {
 			"[         0 containers aborted    ]", //
 			"[         3 containers successful ]", //
 			"[         0 containers failed     ]", //
-			"[         8 tests found           ]", //
+			"[         7 tests found           ]", //
 			"[         0 tests skipped         ]", //
-			"[         8 tests started         ]", //
+			"[         7 tests started         ]", //
 			"[         1 tests aborted         ]", //
-			"[         7 tests successful      ]", //
+			"[         6 tests successful      ]", //
 			"[         0 tests failed          ]", //
 			"" //
 		);
@@ -69,60 +68,9 @@ class MultiReleaseJarTests {
 		result.getOutputLines("out").forEach(System.out::println);
 		result.getOutputLines("err").forEach(System.err::println);
 
-		assertEquals(0, result.getExitCode(), result.toString());
+		assertEquals(0, result.getExitCode());
 		assertEquals("", result.getOutput("err"));
 		assertTrue(result.getOutputLines("out").contains("[INFO] BUILD SUCCESS"));
-
-		var workspace = Path.of("build/test-workspace/multi-release-jar", variant);
-		var actualLines = Files.readAllLines(workspace.resolve("target/junit-platform/console-launcher.out.log"));
-		assertLinesMatch(expectedLines, actualLines);
-	}
-
-	@Test
-	void checkNoScripting() throws Exception {
-		var variant = "no-scripting";
-		var expectedLines = List.of( //
-			">> BANNER >>", ".", //
-			"'-- JUnit Jupiter [OK]", //
-			"  '-- JupiterIntegrationTests [OK]", //
-			"    \\Q+-- javaScriptingModuleIsAvailable() [X] Failed to evaluate condition" //
-					+ " [org.junit.jupiter.engine.extension.ScriptExecutionCondition]:" //
-					+ " Class `javax.script.ScriptEngine` is not loadable," //
-					+ " script-based test execution is disabled. If the originating" //
-					+ " cause is a `NoClassDefFoundError: javax/script/...` and the" //
-					+ " underlying runtime environment is executed with an activated" //
-					+ " module system (aka Jigsaw or JPMS) you need to add the" //
-					+ " `java.scripting` module to the root modules via" //
-					+ " `--add-modules ...,java.scripting`\\E", //
-			"    +-- moduleIsNamed() [OK]", //
-			"    +-- packageName() [OK]", //
-			"    '-- resolve() [OK]", //
-			"", //
-			">> STACKTRACE >>", //
-			"", //
-			"Test run finished after \\d+ ms", //
-			"[         2 containers found      ]", //
-			"[         0 containers skipped    ]", //
-			"[         2 containers started    ]", //
-			"[         0 containers aborted    ]", //
-			"[         2 containers successful ]", //
-			"[         0 containers failed     ]", //
-			"[         4 tests found           ]", //
-			"[         0 tests skipped         ]", //
-			"[         4 tests started         ]", //
-			"[         0 tests aborted         ]", //
-			"[         3 tests successful      ]", //
-			"[         1 tests failed          ]", //
-			"" //
-		);
-		var result = mvn(variant);
-
-		result.getOutputLines("out").forEach(System.out::println);
-		result.getOutputLines("err").forEach(System.err::println);
-
-		assertEquals(1, result.getExitCode(), result.toString());
-		assertEquals("", result.getOutput("err"));
-		assertTrue(result.getOutputLines("out").contains("[INFO] BUILD FAILURE"));
 
 		var workspace = Path.of("build/test-workspace/multi-release-jar", variant);
 		var actualLines = Files.readAllLines(workspace.resolve("target/junit-platform/console-launcher.out.log"));
